--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Main.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="361.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.MainController">
@@ -14,6 +15,9 @@
         <TextField fx:id="mail" alignment="CENTER" layoutX="397.0" layoutY="82.0" promptText="Entrez un mail" />
         <TextField fx:id="password" alignment="CENTER" layoutX="349.0" layoutY="134.0" promptText="Entrez un mot de passe" />
         <TextField fx:id="password2" alignment="CENTER" layoutX="160.0" layoutY="181.0" promptText="Confirmez votre mot de passe" />
-      <Button fx:id="ButtonImage" layoutX="243.0" layoutY="228.0" mnemonicParsing="false" onAction="#chooseImage" text="Choisir une image" />
+      <Button fx:id="ButtonImage" layoutX="80.0" layoutY="237.0" mnemonicParsing="false" onAction="#chooseImage" text="Choisir une image" />
+      <TextField fx:id="localisation" alignment="CENTER" layoutX="358.0" layoutY="194.0" promptText="Entrez une Localisation" />
+      <TextField fx:id="telephone" alignment="CENTER" layoutX="63.0" layoutY="147.0" promptText="Entrez un numéro de téléphone"  />
+   <ImageView fx:id="imageView" fitHeight="85.0" fitWidth="115.0" layoutX="223.0" layoutY="221.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
