--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/InscriptionPage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/InscriptionPage.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="717.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="717.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.InscriptionController">
    <center>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
@@ -21,6 +21,7 @@
                     <TextField fx:id="password" alignment="CENTER" layoutX="349.0" layoutY="134.0" promptText="Entrez un mot de passe" />
                     <TextField fx:id="password2" alignment="CENTER" layoutX="160.0" layoutY="181.0" promptText="Confirmez votre mot de passe" />
                 <Button fx:id="ButtonImage" layoutX="243.0" layoutY="228.0" mnemonicParsing="false" onAction="#chooseImage" text="Choisir une image" />
+               <ImageView fx:id="imageView" fitHeight="85.0" fitWidth="115.0" layoutX="223.0" layoutY="221.0" pickOnBounds="true" preserveRatio="true" />
             </VBox>
          </children>
       </VBox>
