--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/WelcomePage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/WelcomePage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="717.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="717.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.MainController">
    <center>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
@@ -63,7 +63,7 @@
             <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Pas encore inscrit?" />
-                  <Button mnemonicParsing="false" text="Inscrivez-vous" />
+                  <Button mnemonicParsing="false" text="Inscrivez-vous" onAction="#handleInscription"/>
                </children>
                <padding>
                   <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
