--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/InscriptionPage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/InscriptionPage.fxml
@@ -13,10 +13,12 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                 <Button fx:id="ButtonValidate" layoutX="53.0" layoutY="305.0" mnemonicParsing="false" onAction="#handleInscription" text="VALIDER" />
-                <Button fx:id="ButtonCancel" layoutX="470.0" layoutY="305.0" mnemonicParsing="false" text="ANNULER" onAction="#handleWelcome" />
+                <Button fx:id="ButtonCancel" layoutX="470.0" layoutY="305.0" mnemonicParsing="false" onAction="#handleRetour" text="ANNULER" />
                 <TextField fx:id="prenom" alignment="CENTER" layoutX="269.0" layoutY="44.0" promptText="Entrez un Prénom" />
                 <TextField fx:id="nom" alignment="CENTER" layoutX="63.0" layoutY="108.0" promptText="Entrez un Nom" />
                     <TextField fx:id="pseudo" alignment="CENTER" layoutX="80.0" layoutY="44.0" promptText="Entrez un Pseudo" />
+                     <TextField fx:id="localisation" alignment="CENTER" layoutX="80.0" layoutY="44.0" promptText="Entrez une ville" />
+                     <TextField fx:id="telephone" alignment="CENTER" layoutX="80.0" layoutY="44.0" promptText="Numéro de téléphone" />
                     <TextField fx:id="mail" alignment="CENTER" layoutX="397.0" layoutY="82.0" promptText="Entrez un mail" />
                     <TextField fx:id="password" alignment="CENTER" layoutX="349.0" layoutY="134.0" promptText="Entrez un mot de passe" />
                     <TextField fx:id="password2" alignment="CENTER" layoutX="160.0" layoutY="181.0" promptText="Confirmez votre mot de passe" />
