--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/WelcomePage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/WelcomePage.fxml
@@ -37,11 +37,11 @@
                <children>
                   <VBox alignment="CENTER" prefHeight="132.0" prefWidth="548.0" spacing="10.0">
                      <children>
-                        <TextField prefHeight="24.0" prefWidth="330.0" promptText="Email">
+                        <TextField fx:id="emailField" prefHeight="24.0" prefWidth="330.0" promptText="Email">
                            <VBox.margin>
                               <Insets left="50.0" right="50.0" />
                            </VBox.margin></TextField>
-                        <TextField promptText="Mot de passe">
+                        <TextField fx:id="passwordField" promptText="Mot de passe">
                            <VBox.margin>
                               <Insets left="50.0" right="50.0" />
                            </VBox.margin></TextField>
