--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/HomePage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/HomePage.fxml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Text?>
 
-<SplitPane dividerPositions="0.29797979797979796" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21">
-  <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="291.0">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.HomeController">
+   <top>
+      <VBox alignment="TOP_CENTER" prefHeight="105.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="398.0" prefWidth="140.0">
-               <children>
-                  <VBox fx:id="MenuContent" prefHeight="272.0" prefWidth="110.0" />
-                  <Line endX="75.29289245605469" startX="-100.0" />
-                  <VBox fx:id="ProfileContent" prefHeight="125.0" prefWidth="175.0" />
-               </children>
-            </VBox>
-         </children></AnchorPane>
-    <AnchorPane fx:id="mainContent" minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="257.0" />
-  </items>
-</SplitPane>
+            <Text fx:id="namePage" strokeType="OUTSIDE" strokeWidth="0.0" text="Page principale" />
+            <ImageView fx:id="logo" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/logo_codingWeek.png" />
+               </image>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </ImageView>
+         </children>
+      </VBox>
+   </top>
+</BorderPane>
