--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/HomePage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/HomePage.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -23,4 +24,7 @@
          </children>
       </VBox>
    </top>
+   <center>
+      <Button fx:id="deconnxion" mnemonicParsing="false" onAction="#handleDeconnexion" text="Button" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
