--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Profile.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Profile.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 
-<VBox fx:id="ProfileContent" prefHeight="130.0" prefWidth="177.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.SkeletonController">
+<VBox fx:id="ProfileContent" prefHeight="130.0" prefWidth="177.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ProfileController">
    <children>
       <HBox alignment="CENTER" prefHeight="73.0" prefWidth="177.0">
          <children>
@@ -33,7 +33,7 @@
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0">
          <children>
             <Label text="Nb Notification" />
-            <Button mnemonicParsing="false" text="Deconnexion" />
+            <Button mnemonicParsing="false" text="Deconnexion" onAction="#handleDeconnexion" />
          </children>
          <VBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
