--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/SkeletonPage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/SkeletonPage.fxml
@@ -6,16 +6,14 @@
 
 <SplitPane fx:id="skeletonContent" dividerPositions="0.25" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.SkeletonController">
   <items>
-      <SplitPane dividerPositions="0.7" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+      <SplitPane fx:id="fixeContent" dividerPositions="0.7" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
         <items>
             <VBox fx:id="menuContent" alignment="TOP_CENTER" prefHeight="300.0" prefWidth="177.0" />
             <VBox fx:id="profileContent" alignment="CENTER" prefHeight="130.0" prefWidth="177.0" />
         </items>
       </SplitPane>
       <VBox fx:id="mainContent" alignment="CENTER" prefHeight="400.0" prefWidth="424.0">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
+         
       </VBox>
   </items>
 </SplitPane>
