gestion des liens pour service

--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/EquipmentOffer.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/EquipmentOffer.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.EquipmentOfferController">
    <children>
       <Label fx:id="title" layoutX="245.0" layoutY="33.0" text="Matériel proposé" />
@@ -14,6 +13,6 @@
       <Label fx:id="price" layoutX="249.0" layoutY="181.0" text="Coût en florains" textAlignment="CENTER" />
       <Button layoutX="77.0" layoutY="254.0" mnemonicParsing="false" text="Réserver l'offre" />
       <Button layoutX="212.0" layoutY="254.0" mnemonicParsing="false" text="Contacter le propriétaire" />
-      <Button layoutX="407.0" layoutY="254.0" mnemonicParsing="false" text="Retour en arrière" />
+      <Button fx:id="ButtonCancel" layoutX="407.0" layoutY="254.0" mnemonicParsing="false" onAction="#cancel" text="Liste des offres" />
    </children>
 </AnchorPane>
