--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ConsultService.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ConsultService.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ConsultServiceController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ConsultServiceController">
    <children>
       <TextField fx:id="keywords" layoutX="46.0" layoutY="27.0" prefHeight="24.0" prefWidth="508.0" promptText="Mots-clé de la recherche" />
       <DatePicker fx:id="begin" layoutX="46.0" layoutY="70.0" prefHeight="24.0" prefWidth="144.0" promptText="Date de début" />
@@ -17,6 +17,7 @@
       <Label layoutX="364.0" layoutY="62.0" text="Rayon autour de moi (km)" />
       <Button fx:id="ButtonSearch" layoutX="222.0" layoutY="117.0" mnemonicParsing="false" onAction="#handleSearch" text="Lancer la recherche !" />
       <ListView fx:id="results" layoutX="46.0" layoutY="160.0" prefHeight="180.0" prefWidth="508.0" />
-      <Button fx:id="ButtonReset" layoutX="211.0" layoutY="362.0" mnemonicParsing="false" onAction="#handleReset" text="Réinitialiser les résultats" />
+      <Button fx:id="ButtonReset" layoutX="97.0" layoutY="362.0" mnemonicParsing="false" onAction="#handleReset" text="Réinitialiser les résultats" />
+      <Button fx:id="ButtonCancel" layoutX="430.0" layoutY="362.0" mnemonicParsing="false" onAction="#cancel" text="Retour" />
    </children>
 </AnchorPane>
