--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/InscriptionPage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/InscriptionPage.fxml
@@ -1,38 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="717.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.InscriptionController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="798.0" prefWidth="717.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.InscriptionController">
    <center>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" prefHeight="632.0" prefWidth="717.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
-                <Button fx:id="ButtonValidate" layoutX="53.0" layoutY="305.0" mnemonicParsing="false" onAction="#handleInscription" text="VALIDER" />
-                <Button fx:id="ButtonCancel" layoutX="470.0" layoutY="305.0" mnemonicParsing="false" onAction="#handleRetour" text="ANNULER" />
-                <TextField fx:id="prenom" alignment="CENTER" layoutX="269.0" layoutY="44.0" promptText="Entrez un Prénom" />
-                <TextField fx:id="nom" alignment="CENTER" layoutX="63.0" layoutY="108.0" promptText="Entrez un Nom" />
-                    <TextField fx:id="pseudo" alignment="CENTER" layoutX="80.0" layoutY="44.0" promptText="Entrez un Pseudo" />
-                     <TextField fx:id="localisation" alignment="CENTER" layoutX="80.0" layoutY="44.0" promptText="Entrez une ville" />
-                     <TextField fx:id="telephone" alignment="CENTER" layoutX="80.0" layoutY="44.0" promptText="Numéro de téléphone" />
-                    <TextField fx:id="mail" alignment="CENTER" layoutX="397.0" layoutY="82.0" promptText="Entrez un mail" />
-                    <TextField fx:id="password" alignment="CENTER" layoutX="349.0" layoutY="134.0" promptText="Entrez un mot de passe" />
-                    <TextField fx:id="password2" alignment="CENTER" layoutX="160.0" layoutY="181.0" promptText="Confirmez votre mot de passe" />
-                <Button fx:id="ButtonImage" layoutX="243.0" layoutY="228.0" mnemonicParsing="false" onAction="#chooseImage" text="Choisir une image" />
-               <ImageView fx:id="imageView" fitHeight="85.0" fitWidth="115.0" layoutX="223.0" layoutY="221.0" pickOnBounds="true" preserveRatio="true" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Création de votre compte:">
+               <font>
+                  <Font name="Ubuntu" size="20.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Text>
+            <VBox alignment="CENTER" prefHeight="613.0" prefWidth="717.0" spacing="10.0">
+               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+                  <children>
+                      <Button fx:id="ButtonCancel" maxHeight="40.0" maxWidth="100.0" mnemonicParsing="false" onAction="#handleRetour" prefHeight="30.0" prefWidth="100.0" text="ANNULER">
+                        <font>
+                           <Font size="14.0" />
+                        </font>
+                     </Button>
+                      <Button fx:id="ButtonValidate" maxHeight="40.0" maxWidth="100.0" mnemonicParsing="false" onAction="#handleInscription" prefHeight="30.0" prefWidth="100.0" text="VALIDER">
+                        <font>
+                           <Font size="14.0" />
+                        </font>
+                     </Button>
+                  </children>
+                  <padding>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </padding>
+               </HBox>
+               <VBox maxHeight="300.0" maxWidth="350.0" prefHeight="300.0" prefWidth="346.0" spacing="15.0">
+                  <children>
+                      <TextField fx:id="prenom" alignment="CENTER" promptText="Entrez un Prénom">
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding></TextField>
+                      <TextField fx:id="nom" alignment="CENTER" promptText="Entrez un Nom">
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding></TextField>
+                          <TextField fx:id="pseudo" alignment="CENTER" promptText="Entrez un Pseudo">
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding></TextField>
+                           <TextField fx:id="localisation" alignment="CENTER" promptText="Entrez une ville">
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding></TextField>
+                           <TextField fx:id="telephone" alignment="CENTER" promptText="Numéro de téléphone">
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding></TextField>
+                          <TextField fx:id="mail" alignment="CENTER" promptText="Entrez un mail">
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding></TextField>
+                          <TextField fx:id="password" alignment="CENTER" promptText="Entrez un mot de passe">
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding></TextField>
+                          <TextField fx:id="password2" alignment="CENTER" promptText="Confirmez votre mot de passe">
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding></TextField>
+                  </children>
+                  <padding>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </padding>
+                  <VBox.margin>
+                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  </VBox.margin>
+               </VBox>
+               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                  <children>
+                      <Button fx:id="ButtonImage" maxHeight="40.0" maxWidth="200.0" mnemonicParsing="false" onAction="#chooseImage" prefHeight="40.0" prefWidth="200.0" text="Choisir une photo de profil" wrapText="true">
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding>
+                     </Button>
+                     <ImageView fx:id="imageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" />
+                  </children>
+               </HBox>
             </VBox>
          </children>
       </VBox>
    </center>
    <top>
-      <ImageView fitHeight="150.0" fitWidth="358.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+      <ImageView fitHeight="147.0" fitWidth="398.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
             <Image url="@images/logo_codingWeek.png" />
          </image>
+         <BorderPane.margin>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </BorderPane.margin>
       </ImageView>
    </top>
 </BorderPane>
