--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Profile.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Profile.fxml
@@ -3,23 +3,26 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
-<VBox fx:id="ProfileContent" prefHeight="130.0" prefWidth="177.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ProfileController">
+<VBox fx:id="ProfileContent" prefHeight="236.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ProfileController">
    <children>
-      <HBox alignment="CENTER" prefHeight="73.0" prefWidth="177.0">
+      <HBox alignment="CENTER" prefHeight="73.0" prefWidth="177.0" spacing="20.0">
          <children>
-            <Circle fill="#0a79e1" radius="28.0" stroke="BLACK" strokeType="INSIDE">
-               <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </HBox.margin>
-            </Circle>
-            <VBox alignment="CENTER_LEFT" prefHeight="34.0" prefWidth="100.0" spacing="5.0">
+            <ImageView fx:id="photoProfil" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" />
+            <VBox alignment="CENTER_LEFT" prefHeight="34.0" prefWidth="100.0" spacing="10.0">
                <children>
-                  <Label fx:id="labelPseudo" text="Pseudo" />
-                  <Label fx:id="labelSoldeFlorain" text="Solde Florain" />
+                  <Label fx:id="labelPseudo" text="Pseudo">
+                     <font>
+                        <Font name="Ubuntu" size="14.0" />
+                     </font></Label>
+                  <Label fx:id="labelSoldeFlorain" text="Solde Florain">
+                     <font>
+                        <Font name="Ubuntu" size="14.0" />
+                     </font></Label>
                </children>
                <opaqueInsets>
                   <Insets top="5.0" />
@@ -27,13 +30,22 @@
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
             </VBox>
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </HBox>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0">
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
          <children>
-            <Label text="Nb Notification" />
-            <Button mnemonicParsing="false" text="Deconnexion" onAction="#handleDeconnexion" />
+            <Label text="Nb Notification">
+               <font>
+                  <Font name="Ubuntu" size="14.0" />
+               </font></Label>
+            <Button mnemonicParsing="false" onAction="#handleDeconnexion" text="Deconnexion" />
          </children>
          <VBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
