--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/HomePage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/HomePage.fxml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.HomeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="754.0" prefWidth="1074.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.HomeController">
    <top>
       <VBox alignment="TOP_CENTER" prefHeight="105.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fx:id="namePage" strokeType="OUTSIDE" strokeWidth="0.0" text="Page principale" />
-            <ImageView fx:id="logo" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="logo" fitHeight="165.0" fitWidth="499.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/logo_codingWeek.png" />
                </image>
@@ -25,6 +25,61 @@
       </VBox>
    </top>
    <center>
-      <Button fx:id="deconnxion" mnemonicParsing="false" onAction="#handleDeconnexion" text="Button" BorderPane.alignment="CENTER" />
+      <VBox prefHeight="498.0" prefWidth="995.0" spacing="10.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="212.0" prefWidth="870.0" style="-fx-border-color: black;">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Les dernières annonces près de chez vous:" wrappingWidth="512.78857421875">
+                     <font>
+                        <Font name="Ubuntu" size="18.0" />
+                     </font>
+                  </Text>
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </VBox>
+            <HBox alignment="CENTER" prefHeight="237.0" prefWidth="870.0" spacing="10.0">
+               <children>
+                  <VBox prefHeight="237.0" prefWidth="531.0" style="-fx-border-color: black;">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Classement">
+                           <font>
+                              <Font name="Ubuntu" size="18.0" />
+                           </font>
+                        </Text>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+                  <VBox prefHeight="237.0" prefWidth="534.0" style="-fx-border-color: black;">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Rappel:">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets top="5.0" />
+               </padding>
+            </HBox>
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="50.0" />
+         </padding>
+      </VBox>
    </center>
 </BorderPane>
