--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/PrivateProfilepage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/PrivateProfilepage.fxml
@@ -111,7 +111,7 @@
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="600.0">
                <children>
-                  <Button mnemonicParsing="false" text="*" />
+                  <Button fx:id="toggleStateButton" mnemonicParsing="false" onAction="#onToggleStateAction" text="*" />
                   <Label text="Passer en sommeil" />
                </children>
             </HBox>
