--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Profile.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Profile.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -14,9 +13,9 @@
    <children>
       <HBox alignment="CENTER" prefHeight="73.0" prefWidth="177.0" spacing="20.0">
          <children>
-            <VBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="100.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-border-radius: 50;">
+            <VBox fx:id="vbox_pp" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="100.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-border-radius: 50;">
                <children>
-                  <ImageView fx:id="photoProfil" fitHeight="90.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="photoProfil" fitHeight="102.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
                   </ImageView>
                </children>
             </VBox>
