--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Profile.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Profile.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -16,7 +15,7 @@
          <children>
             <VBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="100.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-border-radius: 50;">
                <children>
-                  <ImageView fx:id="photoProfil" fitHeight="90.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="photoProfil" fitHeight="90.0" fitWidth="90.0" onMouseClicked="#handlePrivateProfile" pickOnBounds="true" preserveRatio="true">
                   </ImageView>
                </children>
             </VBox>
@@ -63,7 +62,6 @@
                   <Font name="Ubuntu" size="20.0" />
                </font></Label>
             <Button mnemonicParsing="false" onAction="#handleDeconnexion" text="Deconnexion" />
-            <Button mnemonicParsing="false" onAction="#handlePrivateProfile" text="Button" />
          </children>
          <VBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
