--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/HomePage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/HomePage.fxml
@@ -12,9 +12,9 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="754.0" prefWidth="1074.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.HomeController">
    <top>
-      <VBox alignment="TOP_CENTER" prefHeight="105.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="124.0" prefWidth="1074.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fx:id="logo" fitHeight="165.0" fitWidth="499.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="logo" fitHeight="113.0" fitWidth="499.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/logo_codingWeek.png" />
                </image>
@@ -28,9 +28,9 @@
    <center>
       <VBox prefHeight="498.0" prefWidth="995.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="212.0" prefWidth="870.0" style="-fx-border-color: black;">
+            <VBox prefHeight="200.0" prefWidth="1044.0" style="-fx-border-color: black;">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Les dernières annonces près de chez vous: (100km)" wrappingWidth="512.78857421875">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Les dernières annonces : " wrappingWidth="512.78857421875">
                      <font>
                         <Font name="Ubuntu" size="18.0" />
                      </font>
@@ -44,11 +44,27 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </VBox>
-            <HBox alignment="CENTER" prefHeight="237.0" prefWidth="870.0" spacing="10.0">
+            <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-border-color: black;">
                <children>
-                  <VBox prefHeight="237.0" prefWidth="531.0" style="-fx-border-color: black;">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Les annonces les plus proches :" wrappingWidth="512.78857421875">
+                     <font>
+                        <Font name="Ubuntu" size="18.0" />
+                     </font>
+                  </Text>
+                  <TableView fx:id="nearest_offers" prefHeight="200.0" prefWidth="200.0" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
+            <HBox alignment="CENTER" prefHeight="119.0" prefWidth="1044.0" spacing="10.0">
+               <children>
+                  <VBox prefHeight="237.0" prefWidth="515.0" style="-fx-border-color: black;">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Classement">
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Classement :">
                            <font>
                               <Font name="Ubuntu" size="18.0" />
                            </font>
@@ -60,7 +76,7 @@
                   </VBox>
                   <VBox prefHeight="237.0" prefWidth="534.0" style="-fx-border-color: black;">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Rappel:">
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Rappels :">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -80,7 +96,7 @@
             </HBox>
          </children>
          <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="50.0" />
+            <Insets bottom="5.0" left="5.0" right="5.0" top="20.0" />
          </padding>
       </VBox>
    </center>
