--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/PrivateProfilePage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/PrivateProfilePage.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
@@ -100,13 +101,11 @@
         </HBox>
         <Separator />
         <!-- Section Passer en Sommeil -->
-        <HBox alignment="TOP_CENTER" prefHeight="30.0" prefWidth="600.0" spacing="10.0">
-             <Button fx:id="toggleStateButton" mnemonicParsing="false" onAction="#onToggleStateAction" text="*" />
-             <Label text="Passer le compte en mode sommeil">
-            <font>
-               <Font size="18.0" />
-            </font>
-         </Label>
+        <HBox alignment="TOP_CENTER" prefHeight="30.0" prefWidth="600.0" spacing="80.0">
+         <children>
+            <RadioButton fx:id="ButtonActif" mnemonicParsing="false" onAction="#changeStateToActif" text="Mode Actif" />
+            <RadioButton fx:id="ButtonSommeil" mnemonicParsing="false" onAction="#changeStateToSommeil" text="Mode Sommeil" />
+         </children>
         </HBox>
       <Separator />
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
