--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ConsultEquipment.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ConsultEquipment.fxml
@@ -7,19 +7,26 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="473.0" prefWidth="849.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ConsultEquipmentController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="596.0" prefWidth="955.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ConsultEquipmentController">
    <children>
-      <TextField fx:id="keywords" layoutX="171.0" layoutY="27.0" prefHeight="24.0" prefWidth="508.0" promptText="Mots-clé de la recherche" />
-      <TextField fx:id="priceMin" layoutX="140.0" layoutY="120.0" prefHeight="24.0" prefWidth="100.0" promptText="Prix min" />
-      <TextField fx:id="priceMax" layoutX="556.0" layoutY="120.0" prefHeight="24.0" prefWidth="100.0" promptText="Prix max" /> 
-      <DatePicker fx:id="begin" layoutX="46.0" layoutY="70.0" prefHeight="24.0" prefWidth="144.0" promptText="Date de début" />
-      <Slider fx:id="radius" blockIncrement="5.0" layoutX="606.0" layoutY="77.0" max="500.0" prefHeight="38.0" prefWidth="172.0" showTickLabels="true" showTickMarks="true" value="50.0" />
-      <DatePicker fx:id="end" layoutX="338.0" layoutY="75.0" prefHeight="24.0" prefWidth="144.0" promptText="Date de fin" />
-      <Label layoutX="606.0" layoutY="60.0" text="Rayon autour de moi (km)" />
-      <Button fx:id="ButtonSearch" layoutX="318.0" layoutY="120.0" mnemonicParsing="false" onAction="#handleSearch" text="Lancer la recherche !" />
-      <TableView fx:id="results" layoutX="14.0" layoutY="150.0" prefHeight="202.0" prefWidth="813.0" />
-      <Button fx:id="ButtonReset" layoutX="139.0" layoutY="374.0" mnemonicParsing="false" onAction="#handleReset" text="Réinitialiser les résultats" />
-      <Button fx:id="ButtonCancel" layoutX="679.0" layoutY="374.0" mnemonicParsing="false" onAction="#cancel" text="Retour" />
+      <TextField fx:id="keywords" layoutX="228.0" layoutY="80.0" prefHeight="24.0" prefWidth="508.0" promptText="Mots-clé de la recherche" />
+      <TextField fx:id="priceMin" layoutX="197.0" layoutY="173.0" prefHeight="24.0" prefWidth="100.0" promptText="Prix min" />
+      <TextField fx:id="priceMax" layoutX="613.0" layoutY="173.0" prefHeight="24.0" prefWidth="100.0" promptText="Prix max" /> 
+      <DatePicker fx:id="begin" layoutX="103.0" layoutY="123.0" prefHeight="24.0" prefWidth="144.0" promptText="Date de début" />
+      <Slider fx:id="radius" blockIncrement="5.0" layoutX="663.0" layoutY="130.0" max="500.0" prefHeight="38.0" prefWidth="172.0" showTickLabels="true" showTickMarks="true" value="50.0" />
+      <DatePicker fx:id="end" layoutX="395.0" layoutY="128.0" prefHeight="24.0" prefWidth="144.0" promptText="Date de fin" />
+      <Label layoutX="663.0" layoutY="113.0" text="Rayon autour de moi (km)" />
+      <Button fx:id="ButtonSearch" layoutX="375.0" layoutY="173.0" mnemonicParsing="false" onAction="#handleSearch" text="Lancer la recherche !" />
+      <TableView fx:id="results" layoutX="71.0" layoutY="212.0" prefHeight="288.0" prefWidth="813.0" />
+      <Button fx:id="ButtonReset" layoutX="197.0" layoutY="512.0" mnemonicParsing="false" onAction="#handleReset" text="Réinitialiser les résultats" />
+      <Button fx:id="ButtonCancel" layoutX="737.0" layoutY="512.0" mnemonicParsing="false" onAction="#cancel" text="Retour" />
+      <VBox layoutX="355.0" layoutY="14.0" prefHeight="51.0" prefWidth="198.0">
+         <children>
+            <Label fx:id="State" prefHeight="20.0" prefWidth="262.0" text="Vous êtes en mode sommeil !" />
+            <Button fx:id="ButtonCreate" mnemonicParsing="false" onAction="#handleCreateOffer" prefHeight="24.0" prefWidth="196.0" text="Créer une offre" />
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
